5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1585_825.log
== TEST (2019-03-25 13:10:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio=float(input("Insira o raio: "))
area=pi*raio**2
valume=(3/4)*pi+raio**2

print(round(area,3))
print(round(volume, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    area=pi*raio**2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:10:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from import math *
raio=float(input("Insira o raio: "))
area=pi*raio**2
valume=(3/4)*pi+raio**2

print(round(area,3))
print(round(volume, 3))
-- ERROR:
File "XXXX", line 4
    from import math *
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:12:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from import "math"/ *
raio=float(input("Insira o raio: "))
area=pi*raio**2
valume=(3/4)*pi+raio**2

print(round(area,3))
print(round(volume, 3))
-- ERROR:
File "XXXX", line 4
    from import "math"/ *
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:12:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio=float(input("Insira o raio: "))
area=pi*raio**2
valume=(3/4)*pi+raio**2

print(round(area,3))
print(round(volume, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(volume, 3))
NameError: name 'volume' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:12:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio=float(input("Insira o raio: "))
area=pi*raio**2
volume=(3/4)*pi+raio**2

print(round(area,3))
print(round(volume, 3))
-- OUTPUT:
63.617
22.606
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:13:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio=float(input("Insira o raio: "))
area=pi*raio**2
volume=(3/4)*pi+raio**3

print(round(area,3))
print(round(volume, 3))
-- OUTPUT:
63.617
93.481
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:13:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio=float(input("Insira o raio: "))
area=pi*raio**2
volume=(3/4)*pi+raio**3

print(round(area,3))
print(round(volume, 3))
-- OUTPUT:
63.617
93.481
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:13:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio=float(input("Insira o raio: "))
area=pi*raio**2
volume=(3/4)*pi+raio**3

print(round(area,3))
print(round(volume, 3))
-- OUTPUT:
63.617
93.481
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:14:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio=float(input("Insira o raio: "))
area=pi*raio**2
volume=(3/4)*pi+raio**3

print(round(area,3))
print(round(volume, 3))
-- OUTPUT:
63.617
93.481
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:14:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio=float(input("Insira o raio: "))
area=pi*raio**2
volume=(3/4)*pi*raio**3

print(round(area,3))
print(round(volume, 3))
-- OUTPUT:
63.617
214.708
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:14:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio=float(input("Insira o raio: "))
area=pi*raio**2
volume=3/4*pi*raio**3

print(round(area,3))
print(round(volume, 3))
-- OUTPUT:
63.617
214.708
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:14:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio=float(input("Insira o raio: "))
area=pi*raio**2
volume=3/4*pi*raio**3

print(round(area,3))
print(round(volume, 3))
-- OUTPUT:
63.617
214.708
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:14:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio=float(input("Insira o raio: "))
area=pi*raio**2
volume=3/4*pi*raio**3

print(round(area,3))
print(round(volume, 3))
-- OUTPUT:
63.617
214.708
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:15:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio=float(input("Insira o raio: "))
area=pi*raio**2
volume=4pi/3*raio**3

print(round(area,3))
print(round(volume, 3))
-- ERROR:
File "XXXX", line 7
    volume=4pi/3*raio**3
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:15:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio=float(input("Insira o raio: "))
area=pi*raio**2
volume=4*pi/3*raio**3

print(round(area,3))
print(round(volume, 3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:15:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio=float(input("Insira o raio: "))
area=pi*raio**2
volume=4*pi/3*raio**3

print(round(area,3))
print(round(volume, 3))
-- EXECUTION TIME:
0.181545
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:15:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio=float(input("Insira o raio: "))
area=pi*raio**2
volume=4*pi/3*raio**3

print(round(area,3))
print(round(volume, 3))
-- EXECUTION TIME:
0.175401
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
